[package]
name = "redis-mq"
version = "0.1.0"
edition = "2021"
description = "A simple redis message queue for Rust."
readme = "README.md"
authors = ["Tran Tuyen <vat1906@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
documentation = "https://docs.rs/redis-mq"
repository = "https://github.com/tuyentv96/redis-mq"
keywords = ["queue", "redis", "redis-queue", "message-queue", "redis-message-queue"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
redis = { version = "0.22", features=["connection-manager", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
